testsuite/tests/driver/werror.stderr

werror.hs:6:1: warning: [-Wmissing-signatures (in -Wall)]
    Top-level binding with no type signature: main :: IO ()

werror.hs:7:13: warning: [-Wname-shadowing (in -Wall)]
    This binding for ‘main’ shadows the existing binding
      defined at werror.hs:6:1

werror.hs:7:13: warning: [-Wunused-local-binds (in -Wextra, -Wunused-binds)]
    Defined but not used: ‘main’

werror.hs:8:1: warning: [-Wtabs (in -Wdefault)]
    Tab character found here.
    Please use spaces instead.

werror.hs:10:1: warning: [-Wunused-top-binds (in -Wextra, -Wunused-binds)]
    Defined but not used: ‘f’

werror.hs:10:1: warning: [-Wmissing-signatures (in -Wall)]
    Top-level binding with no type signature: f :: [a2] -> [a1]

werror.hs:10:1: warning: [-Wincomplete-patterns (in -Wextra)]
    Pattern match(es) are non-exhaustive
    In an equation for ‘f’: Patterns not matched: (_:_)

werror.hs:11:1: warning: [-Woverlapping-patterns (in -Wdefault)]
    Pattern match is redundant
    In an equation for ‘f’: f [] = ...

<no location info>: error: 
Failing due to -Werror.
